--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist -r https://github.com/hadisafatima/Portfolio.git"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
